fixed zoom deletin wrap at .opiniones

--- a/Resenas/Resenas.css
+++ b/Resenas/Resenas.css
@@ -104,7 +104,6 @@ a {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    flex-wrap: wrap;
     margin-top: 30px;
     
 
